# opus-rs

./: Cargo.toml  README.md  rustfmt.toml
src/: backend.rs  lib.rs
tests/: compiletests.rs  fec.rs  opus-padding.rs  tests.rs
