[package]
name = "opus"
version = "0.3.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]
edition = "2021"

description = "Safe Rust bindings for libopus"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["opus", "codec", "voice", "sound", "audio"]
categories = ["api-bindings", "encoding", "compression",
	"multimedia::audio", "multimedia::encoding"]

repository = "https://github.com/SpaceManiac/opus-rs"
documentation = "https://docs.rs/opus/0.3.0/opus"

[dependencies]
audiopus_sys = { version = "0.2.0", optional = true }
libc = { version = "0.2", optional = true }
unsafe-libopus = { version = "0.1.0", optional = true }
cfg-if = "1.0.0"

[features]
default = ["audiopus-sys-backend"]
audiopus-sys-backend = ["audiopus_sys", "libc"]
unsafe-libopus-backend = ["unsafe-libopus"]