[package]
name = "opus"
version = "0.3.1"
authors = ["Tad Hardesty <tad@platymuus.com>"]

description = "Safe Rust bindings for libopus"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["opus", "codec", "voice", "sound", "audio"]
categories = ["api-bindings", "encoding", "compression",
	"multimedia::audio", "multimedia::encoding"]

repository = "https://github.com/SpaceManiac/opus-rs"

edition = "2015"

[dependencies]
opusic-sys = "0.5.1"
